Edit: Social Links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -887,7 +887,8 @@ import { ViewTransitions } from "astro:transitions";
 
           <div class="flex mt-3 -mx-2 sm:mt-0">
             <a
-              href="#"
+              href="https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/"
+              target="_blank"
               class="mx-4 text-sm transition-colors duration-300"
               aria-label="MeetUp"
             >
@@ -906,7 +907,8 @@ import { ViewTransitions } from "astro:transitions";
             </a>
 
             <a
-              href="#"
+              href="https://discord.com/invite/k8xj8d75f6"
+              target="_blank"
               class="mx-4 text-sm transition-colors duration-300"
               aria-label="Discord"
             >
@@ -925,7 +927,8 @@ import { ViewTransitions } from "astro:transitions";
             </a>
 
             <a
-              href="#"
+              href="https://www.linkedin.com/company/owddm-kwddm/"
+              target="_blank"
               class="mx-4 text-sm transition-colors duration-300"
               aria-label="LinkedIn"
             >
