Created: Hyperlinks for pre-requirements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -223,13 +223,15 @@ import { ViewTransitions } from "astro:transitions";
           </p>
           <p class="mt-6 text-lg leading-8 text-gray-600">
             In this workshop you are going to learn the steps in creating a new
-            website project from scratch all the way to deployment.
-            We will be using the Astro.build framework with the use of Tailwind
-            CSS and HyGraph as a headless CMS.<br /><br />
+            website project from scratch all the way to deployment. We will be
+            using the Astro.build framework with the use of Tailwind CSS and
+            HyGraph as a headless CMS.<br /><br />
 
             <span class="font-Futurewave text-red-800">
-              NOTE: make sure of the pre-requirements, there will be no such
-              "installations" or troubleshooting during the workshop!
+              NOTE: make sure of the pre-requirements, unfortunately we will not
+              be spending time for installations or troubleshooting during the
+              workshop! Apologies for the inconvenience, but you will have to
+              learn it yourself!
             </span>
           </p>
           <div class="p-8 sm:p-10 lg:flex-auto">
@@ -237,7 +239,7 @@ import { ViewTransitions } from "astro:transitions";
               <h4
                 class="flex-none text-sm font-semibold leading-6 font-Futurewave"
               >
-                Pre-Requirements
+                Pre-Requirements (links provided)
               </h4>
               <div class="h-px flex-auto bg-sky-500"></div>
             </div>
@@ -257,7 +259,9 @@ import { ViewTransitions } from "astro:transitions";
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd"></path>
                 </svg>
-                Node & NPM installed
+                <a href="https://nodejs.org/en/download/" class="p-0"
+                  >Node & NPM installed (LTS version)</a
+                >
               </li>
               <li class="flex gap-x-3">
                 <svg
@@ -271,7 +275,9 @@ import { ViewTransitions } from "astro:transitions";
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd"></path>
                 </svg>
-                GIT installed
+                <a href="https://git-scm.com/downloads" class="p-0"
+                  >GIT installed</a
+                >
               </li>
               <li class="flex gap-x-3">
                 <svg
@@ -285,7 +291,9 @@ import { ViewTransitions } from "astro:transitions";
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd"></path>
                 </svg>
-                GitHub & HyGraph account
+                <a href="https://github.com/signup" class="p-0">GitHub</a> &
+                <a href="https://app.hygraph.com/" class="p-0">HyGraph</a>
+                account
               </li>
               <li class="flex gap-x-3">
                 <svg
@@ -299,7 +307,9 @@ import { ViewTransitions } from "astro:transitions";
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd"></path>
                 </svg>
-                VS Code (optional)
+                <a href="https://code.visualstudio.com/download" class="p-0"
+                  >VS Code (optional)</a
+                >
               </li>
             </ul>
           </div>
@@ -648,6 +658,14 @@ import { ViewTransitions } from "astro:transitions";
               </article>
             </div>
           </div>
+          <p class="mt-8 text-right text-sm font-Futurewave">
+            <a
+              class="text-primary"
+              href="#"
+            >
+              ... find more blog articles &rarr;
+            </a>
+          </p>
         </div>
       </div>
     </section>
@@ -839,6 +857,14 @@ import { ViewTransitions } from "astro:transitions";
               </article>
             </div>
           </div>
+          <p class="mt-8 text-right text-sm font-Futurewave">
+            <a
+              class="text-primary"
+              href="#"
+            >
+              ... check out my projects &rarr;
+            </a>
+          </p>
         </div>
       </div>
     </section>
