--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,22 +136,22 @@ const props = Astro.props;
         <div class="flex flex-col-reverse lg:flex-row items-center gap-12 px-6 bg-gradient-text">
           <div class="text-grey-950">
             <div class="text-center">
-              <h2 class="font-Futurewave text-lg sm:text-xl">
+              <h2 class="font-Futurewave text-xs sm:text-xl">
                 an <span
-                  class="text-xl sm:text-4xl font-extrabold font-Futurewave text-gradient-hero"
+                  class="text-sm sm:text-4xl font-extrabold font-Futurewave text-gradient-hero"
                   >OWDDM
                 </span>Workshop<br />with<span
-                  class="text-xl sm:text-2xl font-extrabold font-Futurewave"
+                  class="text-sm sm:text-2xl font-extrabold font-Futurewave"
                 >
                   Romano Moesa</span
                 >
               </h2>
               <h3
-                class="text-gradient-hero text-xl font-semibold uppercase tracking-widest sm:text-right"
+                class="text-gradient-hero text-sm sm:text-xl font-semibold uppercase tracking-widest sm:text-right"
               >
                 TBA March or April :2024
               </h3>
-              <p class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave">
+              <p class="mt-6 max-w-xl mx-auto leading-7 text-gradient-hero font-Futurewave text-xs sm:text-base">
                 Learn how to create a blog & portfolio in Astro and Tailwind CSS
                 with HyGraph as a headless CMS.
               </p>
